--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.5.2",
     "bookshelf": "~0.6.4",
     "chai": "^1.9.0",
+    "connect-bookshelf": "0.0.3",
     "connect-session-knex": "^1.0.16",
     "cookie-parser": "^1.4.0",
     "ejs": "~0.8.5",
